# mdbook-inline-highlighting

./: Cargo.toml  README.md
src/: config.rs  main.rs  preprocessor.rs
test_book/: book.toml
test_book/src/: preview.md
